# django-allauth-vatsim

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-app.yml
django_allauth_vatsim/: adapter.py  apps.py  provider.py  tests.py  urls.py  views.py
tests/: test_settings.py  tests.py  urls.py
